--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-activitylog": "^4.10",
         "symfony/http-client": "^7.3",
         "symfony/mailgun-mailer": "^7.3",
